fix css for uneven card align

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -197,17 +197,20 @@ nav li + li {
 	padding: .5em;
 	background-color: #fca6c6ff;
 	border-radius: 0.5em 0.5em;
+	margin-top: 0.5em;
 	margin-bottom: 0.5em;
 	text-decoration: none;
 }
 
-.card > .card-body {
+#card > .card-body {
 	display: flex;
-	padding: .5em;
+	padding: 2em;
 	text-decoration: none;
 	border: 1px solid green;
 	border-top: white;
-	justify-content: space-around;
+	justify-content: flex-end;
+	align-items: center;
+	
 }
 
 .LatestPost {
@@ -223,11 +226,12 @@ nav li + li {
 	text-shadow: 0px 2px 0px rgba(0,0,0,0.3);
 }
 
-.card-content {
+#card > .card-body > .card-content {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
 	align-items: flex-end;
+	align-self: flex-end;
 }
 
 .card-content > a{
@@ -254,10 +258,12 @@ nav li + li {
 	color: #000000ff;
 }
 
-.gambar {
+.card-body > #gambar {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	align-self: center;
+	margin-right: auto;
 }
 
 .gambar > .feat-img {
@@ -363,7 +369,7 @@ nav li + li {
 
 .archive-date {
 	padding: .5em .5em;
-	#background-color: #85d066ff;
+	background-color: #85d066ff;
 	margin: 1em 0;	
 }
 
